Update and rename DOMAINS.html to index.html

--- a/index.html
+++ b/index.html
@@ -659,6 +659,6 @@ header, .context-menu, .megamenu-content, footer{
 </style><title>DOMAINS</title>
 </head>
 <body class='typora-export os-windows'><div class='typora-export-content'>
-<div id='write'  class=''><p><img src="新建文本文档 (5).assets/1490342.png" alt="1490342" style="zoom:25%;" /></p><p>&nbsp;</p><p>&nbsp;</p><h1 id='domains'><span>DOMAINS</span></h1><p><span>FOR SALE</span></p><p>&nbsp;</p><p>&nbsp;</p><p><span>uvwxyz.net</span></p><p><span>ooye.net</span></p><p><span>vout.net</span></p><p><span>waves.top</span></p><p><span>erst.cc</span></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><h3 id='contact-me'><span>CONTACT ME  </span></h3><p><span>mail#pingfanpai.com</span></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><h4 id='→back-to-homepage'><em><span>→</span><a href='https://pingfanpai.com'><span>BACK TO HOMEPAGE</span></a></em></h4><p>&nbsp;</p></div></div>
+<div id='write'  class=''><p><img src="img/1490342.png" alt="1490342" style="zoom:25%;" /></p><p>&nbsp;</p><p>&nbsp;</p><h1 id='domains'><span>DOMAINS</span></h1><p><span>FOR SALE</span></p><p>&nbsp;</p><p>&nbsp;</p><p><span>uvwxyz.net</span></p><p><span>ooye.net</span></p><p><span>vout.net</span></p><p><span>waves.top</span></p><p><span>erst.cc</span></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><h3 id='contact-me'><span>CONTACT ME  </span></h3><p><span>mail#pingfanpai.com</span></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><h4 id='→back-to-homepage'><em><span>→</span><a href='https://pingfanpai.com'><span>BACK TO HOMEPAGE</span></a></em></h4><p>&nbsp;</p></div></div>
 </body>
 </html>
